# LatentCDM

./: .gitignore  README.md  pyproject.toml  train.py
configs/: diagnosis_adapter.yaml  diagnosis_adapter_rare_disease.yaml  planner_adapter.yaml  planner_adapter_smoke.yaml  smoke.yaml
prompts/: diagnosis_adapter.txt
scripts/: evaluate_diagnosis.py
src/: config.py
src/data/: __init__.py  mimic.py  text.py
src/models/: __init__.py  latent_bridge.py  loader.py
src/training/: diagnosis_adapter.py  planner_adapter.py
