[project]
name = "latent-cdm"
version = "0.1.0"
description = "Dynamic latent communication for sequential clinical diagnosis"
requires-python = ">=3.11,<3.13"
dependencies = [
  "accelerate==1.5.2",
  "datasets==3.4.1",
  "huggingface-hub==0.29.3",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "peft==0.15.0",
  "pyyaml==6.0.2",
  "safetensors==0.5.3",
  "tokenizers==0.21.1",
  "torch==2.6.0",
  "transformers==4.49.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*", "models*", "training*"]
